--- a/ruff/pyproject.toml
+++ b/ruff/pyproject.toml
@@ -7,10 +7,11 @@ select = [
     "E",  # pycodestyle Error
     "W",  # pycodestyle Warn
     "N",  # pep8-naming
-    "NPY",  # NumPy-specific rules
 ]
 ignore = [
     "N802",  # function name should be lowwercase (conflict with PyQt)
+    "E402",  # import must at top of file (in some case sys.path.append need to
+             # be called before import some modules)
 ]
 
 # Allow autofix for all enabled rules (when `--fix`) is provided.
