--- a/ruff/pyproject.toml
+++ b/ruff/pyproject.toml
@@ -11,7 +11,8 @@ select = [
     "A",  # flak8-builtins
     "PLC",  # Pylint
     "PLE",
-    "PLW"
+    "PLW",
+    "NPY",  # Numpy-specific rules
 ]
 ignore = [
     "N802",  # function name should be lowwercase (conflict with PyQt)
